-*- change-log -*-
2015-06-14 Ed Cashin <ed.cashin@acm.org>
	Add convenience script for creating sparse files
	vblade-23

2015-02-25 Catalin Salgau <csalgau@users.sourceforge.net>
	Warn about Windows problem with CHS misalignment

2014-09-13 Ed Cashin <ed.cashin@acm.org>
	code cleanup: remove unused variables

2014-08-10 Ed Cashin <ed.cashin@acm.org>
	vblade-22

2014-06-08 Ed Cashin <ed.cashin@acm.org>
	update version for v22 release candidate 1
	buffer boundary cleanups
	FreeBSD BPF and MTU fixes from Catalin Salgau
	offset and size options by Christoph Biedl
	vblade-22rc1

2013-03-18 Ed Cashin <ecashin@coraid.com>
	add big-endian support from Daniel Mealha Cabrita <dancab@gmx.net>
	vblade-21

2009-08-14 Sam Hopkins <sah@coraid.com>
	bugfix: aoe command error did not set Error bit in flags
	add support for AoEr11
	set ident serial to shelf.slot:hostname
	vblade-20

2008-10-08 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's bpf fix for FreeBSD
	add Ryan Thomas's fix to stop bufcnt being overridden
	vblade-19
	
2008-07-14 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's block device options patch
	add Chris Webb's socket options patch for better jumbo handling
	remove obsolete contrib/o_direct.diff
	vblade-18

2008-06-09 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's latest BPF patch to vblade, remove from contrib
	update contributed AIO patch for compatibility with current sources
	vblade-17
	
2008-05-07 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's AIO patch to the contributions
	add Chris Webb's BPF patch to the contributions
	vblade-16

2008-02-20 Ed Cashin <ecashin@coraid.com>
	require the amount of data we use, not the amount ethernet requires
	make sure the packet length agrees with the config query length
	make sure the packet length agrees with the amount to write
	remove newline embedded in fw version field of ATA dev ID response
	vblade-15
	
2006-11-20 Sam Hopkins <sah@coraid.com>
	apply contrib jumbo patch to standard distribution